// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`textarea create 1`] = `
<div class="weui-cell">
  <div class="weui-cell__bd"><textarea rows="3" class="weui-textarea"></textarea>
    <div class="weui-textarea-counter">0/100</div>
  </div>
</div>
`;

exports[`textarea show counter 1`] = `
<div class="weui-cell">
  <div class="weui-cell__bd"><textarea rows="3" class="weui-textarea"></textarea>
    <div class="weui-textarea-counter">0/100</div>
  </div>
</div>
`;

exports[`textarea show counter 2`] = `
<div class="weui-cell">
  <div class="weui-cell__bd"><textarea rows="3" class="weui-textarea"></textarea>
    <!---->
  </div>
</div>
`;
